Fix Z-Index

--- a/src/components/tasks/sidebar/index.module.css
+++ b/src/components/tasks/sidebar/index.module.css
@@ -21,7 +21,7 @@
   height: 100%;
   overflow-y: scroll;
   background: #fafafa;
-  z-index: 2;
+  z-index: 3;
 }
 .section {
   display: grid;
